# pod_poc

./: .gitignore  README.md  pyproject.toml
pod_poc/: pod_poc.py
pod_poc/lib/: confirm.py  orders.py  qr_gen.py
pod_poc/templates/: base.html  confirm_delivery.html  delivery_note.html  landing_page.html  list.html  order.html  raw.html  search_order.html  success.html
