[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pod_poc"
version = "0.1"
authors = [
  { name="Jack Betteridge", email="j.betteridge@imperial.ac.uk" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}

[project.scripts]
run-pod-poc = "pod_poc.pod_poc:main"
